--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,10 @@ build/
 ### VS Code ###
 .vscode/
 src/main/resources/static/JS/
+
+
+~$Présentation_monumTour.pptx
+(Project).simp
+(Project).simp.user
+"Pr\303\251sentation_monumTour.pptx"
+monuments_insertion.sql-1.txt
