--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,8 +9,7 @@ spring.jpa.properties.hibernate.format_sql=true
 # Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto= update
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
-
-
+#Port d'écoute
 server.port = 8080
 #filtre spring qui fait que toutes les requetes passe par spring secu
 spring.security.user.name = admin
